# Data2Evidence

./: .dockerignore  .gitignore  .gitmodules  .gitvote.yml  .npmignore  .prettierignore  AGENTS.md  CITATION.cff  CLAUDE.md  Dockerfile  README.md  docker-compose-ci.yml  docker-compose-dx.yml  docker-compose-local.yml  docker-compose.yml  env-vars.md  env.example  install-deno-deps.js  mcp-server-log.md  package-lock.json  package.json  run_hades_test.sh
flows/base/: AGENTS.md  Dockerfile  README.md  package.json  pyproject.toml  requirements_base.txt
flows/base/admin_share_plugin/: flow.py
flows/base/cohort_generator_plugin/: flow.py
flows/base/create_cache_big_query_plugin/: config.py  duckdb_postgres.py  flow.py
flows/base/create_cachedb_fhir_plugin/: config.py  duckdb_postgres.py  fhir_export.py  flow.py  medplum_export.py  utils.py
flows/base/create_cachedb_file_plugin/: README.md  bigquery_copy.py  chunk_utils.py  config.py  copy.py  duckdb_fts.py  duckdb_postgres.py  filter.py  flow.py  fts.py  types.py  utils.py  versioninfo.py
flows/base/create_fhir_datamodel_plugin/: fhir_utils.py  flow.py
flows/base/data_characterization_plugin/: execute_achilles.R  export_to_ares.R  flow.py  types.py  utils.py
flows/base/data_load_plugin/: README.md  flow.py
flows/base/data_management_plugin/: const.py  dataset.py  flow.py  versioninfo.py
flows/base/dataflow_ui_plugin/: README.md  flow.py  nodes.py
flows/base/datamart_plugin/: flow.py  types.py  utils.py
flows/base/dqd_plugin/: execute_dqd.R  flow.py  types.py
flows/base/fhir_to_omop_plugin/: flow.py
flows/base/hana_load_plugin/: constants.py  create.py  flow.py  types.py  versioninfo.py
flows/base/hana_load_plugin/create_script/: hana_constraints.sql  hana_ddl.sql  hana_indices.sql  hana_primarykey.sql
flows/base/loyalty_score_plugin/: features.py  flow.py
flows/base/omop_cdm_plugin/: create.py  create_cdm_tables.R  flow.py  types.py  update.py  versioninfo.py
flows/base/phenotype_plugin/: README.md  create_result_tables.R  flow.py  get_cohort_definitions.R  materialize_cohorts.R  types.py
flows/base/questionnaire_plugin/: flow.py
flows/base/shiny_live_plugin/: build_shiny_live.R  flow.py  types.py
flows/base/strategus_plugin/: flow.py  nodes.py
flows/cohort_survival/: .Rprofile  Dockerfile  package.json  pyproject.toml  requirements_cohort_survival.txt
flows/cohort_survival/cohort_survival_plugin/: .lintr  cohort_survival copy.R  cohort_survival.R  flow.py  pyproject.toml  types.py
flows/data_management/: Dockerfile  package.json  pyproject.toml  requirements_data_management.txt
flows/data_management/data_management_plugin/: const.py  dataset.py  flow.py  liquibase.py  types.py  versioninfo.py
flows/data_transformation/: AGENTS.md  Dockerfile  package.json  pyproject.toml  requirements_data_transformation.txt  requirements_ner.txt
flows/data_transformation/data_load_fhir_plugin/: README.md  flow.py  types.py
flows/data_transformation/data_load_plugin/: flow.py
flows/data_transformation/dataflow_ui_plugin/: README.md  flow.py  flowutils.py  hooks.py  nodes.py  types.py
flows/data_transformation/dataflow_ui_plugin/fhirutils/: AllergyIntolerance.json  Observation.json  fhir_transform.js  utils.py
flows/data_transformation/dataflow_ui_plugin/nodeutils/: csvutils.py  fileutils.py  querygenerator.py
flows/data_transformation/dicom_etl_plugin/: README.md  flow.py  tasks.py  utils.py
flows/data_transformation/fhir_to_omop_plugin/: flow.py
flows/data_transformation/mimic_omop_conversion_plugin/: README.md  flow.py  load_data.py  omop_conversion.py  types.py  utils.py
flows/data_transformation/ner_extract_plugin/: README.md  flow.py  nel.py  types.py  umls2omop.py
flows/data_transformation/questionnaire_plugin/: flow.py
flows/data_transformation/white_rabbit_plugin/: data_mapping_tasks.py  flow.py  tasks.py  types.py
flows/hades/: Dockerfile  Dockerfile.local  package.json  pyproject.toml  requirements_hades.txt
flows/hades/cohort_generator_plugin/: README.md  create_cohort.R  flow.py  types.py
flows/hades/strategus_plugin/: custom_types.py  dc-local.yml  flow.py  flowutils.py  nodes.py  run_hades_test.sh  table1.py  types.py
flows/hades/strategus_plugin/tests/: cohort_def_shared.py  test_cohort_definition_shared_resource.py  test_cohort_survival_module.py  test_kaplan_meier_cm_analysis.py  test_nodes.py  test_target_comparator_outcomes.py  test_treatment_patterns.py
flows/loyalty_score/: Dockerfile  package.json  pyproject.toml  requirements_loyalty_score.txt
flows/loyalty_score/loyalty_score_plugin/: features.py  flow.py
flows/search_embedding/: Dockerfile  Dockerfile_copy  package.json  pyproject.toml  requirements_search_embedding.txt
flows/search_embedding/search_embedding_plugin/: README.md  flow.py  flow_org.py  types.py  utils.py
plugins/flows/base/: Dockerfile  package.json  pyproject.toml
plugins/flows/base/create_cachedb_fhir_plugin/: config.py  duckdb_postgres.py  flow.py
plugins/flows/base/create_cachedb_file_plugin/: chunk_utils.py  copy.py  flow.py  fts.py  types.py  versioninfo.py
plugins/flows/base/create_cachedb_hana_plugin/: flow.py  types.py
plugins/flows/base/data_characterization_plugin/: execute_achilles.R  flow.py  types.py  utils.py
plugins/flows/base/dqd_plugin/: execute_dqd.R  flow.py  types.py  utils.py
plugins/flows/base/hana_load_plugin/: flow.py  load.py  types.py  versioninfo.py
plugins/flows/base/omop_cdm_plugin/: create.py  flow.py  types.py  update.py  versioninfo.py
plugins/flows/base/phenotype_plugin/: flow.py  get_cohort_definitions.R  types.py
plugins/flows/base/shiny_live_plugin/: flow.py
plugins/flows/data_management/: Dockerfile  package.json  pyproject.toml
plugins/flows/data_management/data_management_plugin/: const.py  dataset.py  flow.py  hooks.py  liquibase.py  types.py  versioninfo.py
plugins/flows/hades/: Dockerfile  package.json  pyproject.toml
plugins/flows/hades/cohort_generator_plugin/: flow.py  types.py
plugins/flows/search_embedding/: Dockerfile  package.json  pyproject.toml
(+4711 files in other folders)
