[project]
name = "data-transformation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "asyncio==4.0.0",
    "duckdb==1.4.0",
    "genson==1.3.0",
    "httpx==0.27.2",
    "ibis-framework[duckdb,postgres]==11.0.0",
    "jsonpath-ng==1.7.0",
    "numpy==2.0.0",
    "orthanc-api-client==0.15.3",
    "pandas==2.2.2",
    "pandasql==0.7.3",
    "prefect[dask,docker,shell]==3.0.3",
    "psycopg2-binary==2.9.6",
    "pydantic==2.10.6",
    "pydicom==2.4.4",
    "pyjwt==2.10.1",
    "pymssql==2.3.4",
    "pyomop==6.1.0",
    "python-calamine==0.3.1",
    "rpy2==3.5.13",
    "s3fs==2023.1.0",
    "sqlalchemy==2.0.38",
    "xmltodict==0.14.2",
    "xvfbwrapper>=0.2.15",
    "Cython==3.2.3",
    "setuptools==80.9.0",
    "wheel==0.45.1",
    "pyarrow==22.0.0",
]

[project.optional-dependencies]
dataflow_ui = [
    "genson==1.3.0",
    "jsonpath-ng==1.7.0",
    "prefect[dask]==3.0.3",
]
dicom-etl = [
    "orthanc-api-client==0.15.3",
    "pydicom==2.4.4",
    "s3fs==2023.1.0",
]
white-rabbit = [
    "pandasql==0.7.3",
    "python-calamine==0.3.1",
]
