[project]
name = "hades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.3.2",
    "httpx==0.27.2",
    "ibis-framework[duckdb,postgres]==10.0.0",
    "numpy==2.0.0",
    "openai==0.28",
    "pandas==2.2.2",
    "prefect[docker,shell]==3.0.3",
    "psycopg2-binary==2.9.6",
    "pydantic==2.10.6",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.0",
    "rpy2==3.5.13",
    "sqlalchemy==2.0.38",
]

[dependency-groups]
dev = [
    "ruff==0.12.7",
    "pytest==8.4.1",
    "uv==0.8.4",
]
