[project]
name = "search-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.2.1",
    "ibis-framework[duckdb,postgres]==10.0.0",
    "pandas==2.2.2",
    "prefect[docker,shell]==3.0.3",
    "pydantic==2.10.6",
    "pyjwt==2.10.1",
    "sqlalchemy==2.0.38",
    "torch==2.6.0",
    "tqdm==4.66.4",
    "transformers==4.44.2",
]

[project.optional-dependencies]
hana = []

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "ruff==0.12.7",
    "uv==0.8.4",
]
