[project]
name = "base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.4.0",
    "google-cloud-bigquery==3.6.0",
    "google-cloud-bigquery-storage==2.25.0",
    "httpx==0.27.2",
    "ibis-framework[duckdb,postgres]==10.0.0",
    "numpy==2.0.0",
    "openai==0.28",
    "pandas==2.2.2",
    "prefect[docker,shell]==3.0.3",
    "psycopg2-binary==2.9.6",
    "pydantic==2.10.6",
    "pyjwt==2.12.0",
    "rpy2==3.5.13",
    "sqlalchemy==2.0.38",
    "sqlalchemy-bigquery==1.14.1",
    "shinylive==0.8.5",
]

[project.optional-dependencies]
hana = [
    "sqlalchemy-hana==2.2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.12.7",
    "uv==0.11.6",
]
