[project]
name = "hades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.4.0",
    "genson==1.3.0",
    "httpx==0.27.2",
    "ibis-framework[duckdb,postgres]==10.0.0",
    "numpy==2.0.0",
    "openai==0.28",
    "pandas==2.2.2",
    "prefect[docker,shell]==3.0.3",
    "psycopg2-binary==2.9.6",
    "pydantic==2.10.6",
    "pyjwt==2.12.0",
    "python-dotenv==1.2.2",
    "rpy2==3.5.13",
    "sqlalchemy==2.0.38",
]

[dependency-groups]
dev = [
    "ruff==0.12.7",
    "pytest==9.0.3",
    "uv==0.11.6",
]
