[project]
name = "search-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.4.0",
    "ibis-framework[duckdb,postgres]==10.0.0",
    "pandas==2.2.2",
    "prefect[docker,shell]==3.0.3",
    "psycopg2-binary==2.9.6",
    "pydantic==2.10.6",
    "pyjwt==2.12.0",
    "sqlalchemy==2.0.38",
    "torch==2.8.0",
    "tqdm==4.66.4",
    "transformers==5.0.0rc3",
]

[project.optional-dependencies]
hana = []

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "ruff==0.12.7",
    "uv==0.11.6",
]
